--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Shaw Talebi
-logo: /assets/img/headshot_circle.png
+title: Asaf Delmdigo
+logo: /assets/img/AD.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
