--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Asaf Delmdigo
-logo: /assets/img/AD.png
+logo: /assets/imgs/AD.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
