--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Asaf Delmedigo
-logo: /assets/imgs/AD.png
+logo: /assets/imgs/AD.jpeg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
